added descriptiion of terms

--- a/main.html
+++ b/main.html
@@ -41,6 +41,8 @@
 <blockquote>"Those who choose to do the NRA's bidding will be held accountable by our constituents. ... Something has to be done. We must take a stand. The American people are desperately looking for help, some help, any help." <br><em>- Senate Minority Leader Harry Reid </em></blockquote>
 
 <iframe src="NRASpending.html" frameBorder="0"></iframe>
+<em><h6>Independent Expenditures: Money spent independent from a politician's official campaign to support or oppose a candidate <br> Contributions to Committees: Committees are organized campaign efforts for politicians</h6></em>
+
 <p>54 Senators (48 Democrats, 4 Republicans, and 2 Independets) were in favor of Manchin-Toomey Amendment, and 46 Senators (5 Democrats, 41 Republicans) were against the amendment.</p>
 <p>Manchin-Toomey Amendment, 6 votes too short, did not pass the vote in the Senate.</p>
 <div class="blockquote2">Manchin-Toomey Gun Control Amendment 2013 Vote <strong><br> Yes: 54</strong> <br> <strong> No: 46 <br></strong> 60 votes were needed to pass the amendment</div>
