--- a/Manchin_NRA.html
+++ b/Manchin_NRA.html
@@ -25,7 +25,7 @@ $(function () {
             type: 'bar'
         },
         title: {
-            text: 'Joe Manchin Election Cycle Campaign Contributions'
+            text: 'Joe Manchin Election Cycle Campaign Contributions from Gun Rights PACs'
         },
 		credits:{
 			  enabled: false,
