--- a/bipartisanSupport.html
+++ b/bipartisanSupport.html
@@ -11,7 +11,7 @@
 <script>
 $(function () {
     $('#container').highcharts({
-        colors: ['#2f7ed8','#910000'],
+        colors: ['#2f7ed8','#ff0000'],
         chart: {
             type: 'bar'
         },
