--- a/Cornyn_NRA.html
+++ b/Cornyn_NRA.html
@@ -20,7 +20,7 @@ $(function () {
     }
   });
     $('#container').highcharts({
-		colors: ['#aaa','#ccc'],
+		colors: ['#b3b3b3','#737373'],
         chart: {
             type: 'bar'
         },
