--- a/Manchin-ToomeyPart2.html
+++ b/Manchin-ToomeyPart2.html
@@ -46,7 +46,7 @@ $(function () {
       credits: {
       enabled: false,
     },
-	colors: ['#aaa','#ccc', 'yellow'],
+	colors: ['#b3b3b3','#737373', '#404040'],
 	exporting: {
             enabled: false
         },
@@ -61,7 +61,7 @@ $(function () {
                     style: {
                         fontWeight: 'bold',
                         color: 'black',
-						fontSize:'.8rem'
+						fontSize:'1rem'
                     }
                 },
                 startAngle: -90,
