--- a/Feinstein.html
+++ b/Feinstein.html
@@ -49,7 +49,7 @@ $(function () {
       credits: {
       enabled: false,
     },
-	colors: ['#aaa','#ccc', 'yellow'],
+	colors: ['#b3b3b3','#737373', '#404040'],
         tooltip: {
             pointFormat: '{series.name}: <b>{point.y}</b>'
         },
@@ -61,7 +61,7 @@ $(function () {
                     style: {
                         fontWeight: 'bold',
                         color: 'black',
-						 fontSize:'.8rem'
+						 fontSize:'1rem'
                     }
                 },
                 startAngle: -90,
