--- a/NRASpending.html
+++ b/NRASpending.html
@@ -26,7 +26,7 @@ $(function () {
         chart: {
             type: 'column'
         },
-      colors: ['#ddd','#ccc', '#aaa'],
+      colors: ['#b3b3b3','#737373', '#404040'],
         title: {
             text: 'Money spent by the NRA on campaigns and candidates'
         },
