--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
 <p>But beyond mass shootings, the day-to-day individual gun violence in America is also increasing on a national level. Gun-related deaths have steadily increased since 2009. Between 2000 and 2013, gun-related deaths have risen by 4,973 deaths. Gun-related deaths could outnumber deaths by car accidents in 2015, according to multiple reports.</p>
 <iframe src="Gun_related_deaths.html" frameBorder="0"></iframe>
 <p>The number of gun-related deaths has increased over the past 15 years. From 2000 to 2013, the annual death count has increased from 28,663 to 33,636.</p>
-
+<p>In the aftermath of many of these shootings measures to limit those who desire to own a gun and are mentally ill or are on the U.S. terrorism watch list from owning a gun.
 
 <iframe src="bipartisanSupport.html" frameBorder="0"></iframe>
 <p>After the Sandy Hook Elementary School shooting, Obama promised he would make his best effort to jumpstart reform in Congress. One of his promises were universal background checks for potential gun owners.</p>
