--- a/Manchin-ToomeyPart2.html
+++ b/Manchin-ToomeyPart2.html
@@ -76,7 +76,7 @@ $(function () {
             data: [
                 ['Yes',   48],
                 ['No',       50],
-              ['No vote', 2],
+              ['No Vote', 2],
                 {
                     name: 'Proprietary or Undetectable',
                     y: 0,
