--- a/Gun_related_deaths.html
+++ b/Gun_related_deaths.html
@@ -62,7 +62,7 @@
             }
         },
         tooltip: {
-            pointFormat: '<b>{point.y:,.0f}</b><br/>gun related deaths in {point.x}'
+            pointFormat: '<strong><b>{point.y:,.0f}</b><br/>gun-related deaths in {point.x}</strong>'
         },
         legend: {
             enabled:false,
