--- a/Feinstein.html
+++ b/Feinstein.html
@@ -51,7 +51,7 @@ $(function () {
     },
 	colors: ['#b3b3b3','#737373', '#404040'],
         tooltip: {
-            pointFormat: '{series.name}: <b>{point.y}</b>'
+            pointFormat: '<strong>{series.name}: <b>{point.y}</b></strong>'
         },
         plotOptions: {
             pie: {
