--- a/Manchin-ToomeyPart2.html
+++ b/Manchin-ToomeyPart2.html
@@ -41,7 +41,7 @@ $(function () {
                 },
         },
         title: {
-            text: 'Manchin Toomey Gun Control Amendment Second Vote',
+            text: 'Manchin-Toomey Gun Control Amendment Second Vote',
         },
       credits: {
       enabled: false,
@@ -51,7 +51,7 @@ $(function () {
             enabled: false
         },
         tooltip: {
-            pointFormat: '{series.name}: <b>{point.y}</b>'
+            pointFormat: '<strong>{series.name}: <b>{point.y}</b></strong>'
         },
         plotOptions: {
             pie: {
