--- a/NRASpending.html
+++ b/NRASpending.html
@@ -73,8 +73,12 @@ $(function () {
         },
 
         tooltip: {
+        	enabled:false,
+        	/*
             headerFormat: '<span style="font-size:11px">{series.name}</span><br>',
             pointFormat: '<span style="color:{point.color}">{point.name}</span>: <b>${point.y}</b> of total<br/>'
+
+            */
         },
 
         series: [{
