--- a/main.html
+++ b/main.html
@@ -13,7 +13,8 @@
 <h1>Politicians battle over gun rights</h1>
 <h2>The search for a bill on the Hill</h2>
 <div id="content">
-<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to what President Barack Obama has described as a national problem. Obama has promoted gun control legislation in 15 of his speeches. He and liberal members of Congress have repeatedly asked for lawmakers to support measures that would require background checks before the purchase of guns and prevent the mentally ill from obtaining them.</p>
+<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to what President Barack Obama has described as a national problem. Obama has promoted gun control legislation in 15 of his speeches. He and liberal members of Congress have also repeatedly asked for lawmakers to support measures that would require background checks before the purchase of guns and prevent the mentally ill from obtaining them.</p>
+<p>On Dec. 2, a man and his wife entered a facility for the disabled with gun and killed 14 people. They are now suspected to be terrorists, radicalized from Pakistan. On Dec. 3, Sen. Diane Feinstein (D-Calif.) delivered an amendment to the floor that would have prevented people on a federal terrorist watchlist from purchasing guns. The measure failed. The Senate also blocked bipartisan legislation from Sens. Pat Toomey (R-Penn.) and Joe Manchin (D-W.Va.) that would have required background checks for the purchase of arms. The measure first appeared in front of the Senate in 2012 after the Sandy Hook Elementary School shooting in Newtown, Conn. Both times the bill failed by narrow margins with 60 votes to pass and senators who were present for both votes held strong to their initial votes, in favor or opposed, that they cast in 2012. 
 <div class="flex">
 <iframe src="Feinstein.html" frameBorder="0"></iframe>
 </div>
@@ -21,31 +22,35 @@
 <iframe src="Manchin-ToomeyPart2.html" frameBorder="0"></iframe>
 </div>
 
-<p>Many of Obama's calls to action have followed multiple-casualty mass shootings. <em>Mother Jones</em> has compiled a list of these shootings, many of which caused more than 10 deaths. These shootings have increased in frequency in recent years. Of the top 10 most deadly mass shootings, 6 occured after 2007. In fact, the United States has become a world leader in mass shootings, University of Alabama criminology professor Adam Lankford found. His research showed that the U.S. accounts for one-third of all mass shootings committed in the world with data from 1966 to 2012. The study also found that widespread, often uncensored gun ownership might be a large reason for the climate of gun violence in this country.</p>
+<p>These amendments and many of Obama's calls to action have followed multiple-casualty mass shootings. <em>Mother Jones</em> has compiled a list of these shootings, many of which caused more than 10 deaths. These shootings have increased in frequency in recent years. Of the top 10 most deadly mass shootings, 7 occured after 2007. </p>
+
+<p>In fact, the United States has become a world leader in mass shootings, according to University of Alabama criminology professor Adam Lankford. His research showed that the U.S. accounts for one-third of all mass shootings committed in the world with data from 1966 to 2012. The study also found that widespread, often uncensored, gun ownership might be a large reason for the climate of gun violence in this country. </p>
+
+<p>There have been more mass shootings this year than there have been days. Additionally, <em>Mother Jones</em> found that three-fourths of the mass shootings occured with legally purchased weapons.</p>
 
 <div class="timeline">
   <iframe src='http://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1gI0ZXhVbzCHEdBC9moHCVYgiD3sX5fKNEtmVHGdTRwk&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' frameborder='0'></iframe>
 </div>
-<p>But beyond mass shootings, the day-to-day individual gun violence in America is also increasing on a national level. Gun-related deaths have steadily increased since 2009. Between 2000 and 2013, gun-related deaths have risen by 4,973 deaths. Gun-related deaths could outnumber deaths by car accidents in 2015, according to multiple reports.</p>
+<p>But beyond mass shootings, the day-to-day individual gun violence in America is also increasing on a national level. Gun-related deaths have steadily increased since 2009. Between 2000 and 2013, gun-related deaths have risen by 4,973 deaths. According to multiple media reports, gun-related deaths could outnumber deaths by car accidents this year.</p>
 <iframe src="Gun_related_deaths.html" frameBorder="0"></iframe>
 <p>The number of gun-related deaths has increased over the past 15 years. From 2000 to 2013, the annual death count has increased from 28,663 to 33,636.</p>
-<p>In the aftermath of many of these shootings measures to limit those who desire to own a gun and are mentally ill or are on the U.S. terrorism watch list from owning a gun.
+<p> These numbers have drummed up widespread support for amendments like Feinstein and Manchin and Toomey's, including bipartisan public support.</p>
 
 <iframe src="bipartisanSupport.html" frameBorder="0"></iframe>
-<p>After the Sandy Hook Elementary School shooting, Obama promised he would make his best effort to jumpstart reform in Congress. One of his promises were universal background checks for potential gun owners.</p>
 <p>There is strong support from both Democrats and Republicans for background checks for gun purchases, preventing mentally ill from purchasing guns, federal database for gun sales, and ban on assault-style weapons (with the exception of only 48% Republican support for ban on assault-style weapons).</p>
 </div>
 
 <div class="banner2"></div>
 <div id="content">
+<p>After both effors at gun reform failed in the Senate last week, Senate Minority Leader Harry Reid made a statement accusing those who voted against the amendments of folding to the demands of the NRA that such legislation violates the Second Amendment.</p>
 <blockquote>"Those who choose to do the NRA's bidding will be held accountable by our constituents. ... Something has to be done. We must take a stand. The American people are desperately looking for help, some help, any help." <br><em>- Senate Minority Leader Harry Reid </em></blockquote>
-
+<p>The NRA spends millions of dollars each year on gun rights lobbying. Their contributions to campaigns extend past money contributions and include individual campaigning, as well. They create TV and radio ads to support candidates with high ratings on their gun-rights scale and condemn candidates that do not fall in line with their Second Amendment political views. About 89 percent of their money goes to Republican candidates and they always outspend gun control advocates.</p>
 <iframe src="NRASpending.html" frameBorder="0"></iframe>
-<em><h6>Independent Expenditures: Money spent independent from a politician's official campaign to support or oppose a candidate <br> Contributions to Committees: Committees are organized campaign efforts for politicians</h6></em>
-
-<p>54 Senators (48 Democrats, 4 Republicans, and 2 Independets) were in favor of Manchin-Toomey Amendment, and 46 Senators (5 Democrats, 41 Republicans) were against the amendment.</p>
-<p>Manchin-Toomey Amendment, 6 votes too short, did not pass the vote in the Senate.</p>
+<em><strong><h6>Independent Expenditures:</strong> Money spent independent from a politician's official campaign to support or oppose a candidate <br> <strong>Contributions to Committees:</strong> Committees are organized campaign efforts for politicians</h6></em>
+<p>After the Sandy Hook Elementary School shooting, Obama promised he would make his best effort to jumpstart reform in Congress. One of his promises were universal background checks for potential gun owners.</p>
 <div class="blockquote2">Manchin-Toomey Gun Control Amendment 2013 Vote <strong><br> Yes: 54</strong> <br> <strong> No: 46 <br></strong> 60 votes were needed to pass the amendment</div>
+<p>Fift-four Senators (48 Democrats, 4 Republicans, and 2 Independets) were in favor of Manchin-Toomey Amendment in 2012, and 46 Senators (5 Democrats, 41 Republicans) were against the amendment.</p>
+<p>Manchin-Toomey Amendment, 6 votes too short, did not pass the vote in the Senate.</p>
 <p>"We can respect the Second Amendment while keeping an irresponsible, law-breaking few from inflicting harm on a massive scale," Obama said in a speech after the Sandy Hook Elementary School mass shooting. </p>
 <iframe src="Manchin_NRA.html" frameBorder="0"></iframe>
 <p>Manchin received substancial funds from the National Rifle Association and Safari Club International up until the election cycle after the proposed amendment. Afterward, he largely lost financial support from the top two gun control groups.</p>
