--- a/NRASpending.html
+++ b/NRASpending.html
@@ -45,7 +45,7 @@ $(function () {
                 style: {
                     width: '450px',
                     color: '#000000',
-                    fontSize:'16px'
+                    fontSize:'22px',
                 }
             },
             type: 'category',
