--- a/main.html
+++ b/main.html
@@ -47,28 +47,25 @@
 <p>The NRA spends millions of dollars each year on gun rights lobbying. Their contributions to campaigns extend past money contributions and include individual campaigning, as well. They create TV and radio ads to support candidates with high ratings on their gun-rights scale and condemn candidates that do not fall in line with their Second Amendment political views. About 89 percent of their money goes to Republican candidates and they always outspend gun control advocates.</p>
 <iframe src="NRASpending.html" frameBorder="0"></iframe>
 <em><strong><h6>Independent Expenditures:</strong> Money spent independent from a politician's official campaign to support or oppose a candidate <br> <strong>Contributions to Committees:</strong> Committees are organized campaign efforts for politicians</h6></em>
-<p>After the Sandy Hook Elementary School shooting, Obama promised he would make his best effort to jumpstart reform in Congress. One of his promises were universal background checks for potential gun owners.</p>
+<p>After the Sandy Hook Elementary School shooting, Obama promised he would make his best effort to jumpstart gun reform in Congress. "We can respect the Second Amendment while keeping an irresponsible, law-breaking few from inflicting harm on a massive scale," Obama said in a speech after the Sandy Hook Elementary School mass shooting. One of his promises were universal background checks for potential gun owners. Manchin and Toomey delivered on that promise but failed to rangle the votes the amendment required to pass.</p>
 <div class="blockquote2">Manchin-Toomey Gun Control Amendment 2013 Vote <strong><br> Yes: 54</strong> <br> <strong> No: 46 <br></strong> 60 votes were needed to pass the amendment</div>
 <p>Fift-four Senators (48 Democrats, 4 Republicans, and 2 Independets) were in favor of Manchin-Toomey Amendment in 2012, and 46 Senators (5 Democrats, 41 Republicans) were against the amendment.</p>
-<p>Manchin-Toomey Amendment, 6 votes too short, did not pass the vote in the Senate.</p>
-<p>"We can respect the Second Amendment while keeping an irresponsible, law-breaking few from inflicting harm on a massive scale," Obama said in a speech after the Sandy Hook Elementary School mass shooting. </p>
+<p>Manchin-Toomey Amendment was 6 votes too short and did not pass the vote in the Senate.</p>
+<p> Manchin had received a significan amount of support from the NRA during his election runs in 2010 and 2012. That support dropped to zero in the year following the amendment.</p>
 <iframe src="Manchin_NRA.html" frameBorder="0"></iframe>
-<p>Manchin received substancial funds from the National Rifle Association and Safari Club International up until the election cycle after the proposed amendment. Afterward, he largely lost financial support from the top two gun control groups.</p>
-<p>The NRA withdrew support and ran a television campaign ad against the senator, as he ran for re-election in the next election cycle.</p>
+<p>Manchin received substantial funds from the National Rifle Association and Safari Club International up until the election cycle after the proposed amendment. Afterward, he largely lost financial support from the top two gun control groups.</p>
+<p>In addition to withdrawing its financial support, the NRA also used footage it had ran of the senator previously and created an attack television ad for the senator in West Virginia, as he geared up to run for re-election. The ad appeared on YouTube shortly after the amendment's vote and accused the senator of working with Obama.</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/J_q5zqrVktg" frameborder="0" allowfullscreen></iframe>
-<p>However, Manchin hasn't given up his efforts to pass gun reform. He continued to speak out in favor of background checks after the bill failed. The first gun control amendments to hit the Senate floor came after the Bernardino mass shooting at the beginning of December.</p>
-
+<p>However, Manchin hasn't given up his efforts to pass gun reform. He continued to speak out in favor of background checks after the bill failed, which shows in his revival of the amendment last week. 
 
 </div>
 
 
 <div id="content">
-<p>The two amendments were a renewed effort by Toomey and company to pass their amendment that failed two-and-a-half years prior. The second amendment was introduced by Sen. Diane Feinstein and suggested restrictions on people to purchase guns who are on a federal terrorism watch list. Both Amendments failed. 
-<p>Those who voted on both of Toomey's appearances in the Senate largely voted the same as they had in 2013. The amendments both needed 60 votes to progress, but lost on a close margin.</p>
-<p>Sens. Harry Reid and Chuck Schumer accused legislators of Kowtowing to NRA interests. Sen. John Cornyn, as a whip, was one of the strongest voices of the opposition to the bills.</p>
+
+<p>Sens. Harry Reid and Chuck Schumer accused legislators of Kowtowing to NRA interests after the most recent vote to come in two and a half years. Sen. John Cornyn, as whip, was one of the strongest voices of the opposition to the bills. He failed to receive any direct support from the NRA or Safari Club International in the 2012 election cycle, but received much larger direct contributions after he voted against Manchin and Toomey's amendment shortly after that election cycle</p>
 <iframe src="Cornyn_NRA.html" frameBorder="0"></iframe>
-<p>Cornyn began receiving money from gun rights PACs after he voted against Toomey's amendment in 2013. Before that, he had minimally benefited from NRA and Safari Club International's investment in gun-control legislation outcomes.</p>
-<p>This year, there have been more mass shootings than there are days in the year. While Congress refuses to move on background checks and reform, the public groes increasingly concerned for its safety. On Saturday night, the president gave an address to the nation once again calling for change.</p>
+<p>While Congress refuses to move on background checks and reform, the public groes increasingly concerned for its safety. On Sunday night, the president gave an address to a nation concerned about terrorism on American soil. He attempted to quel their fears, but Reid insists the American people want more than assurances, as mass shootings soar; they want change.</p>
 </div>
 </body>
 </html>
