add dollar sign

--- a/Manchin_NRA.html
+++ b/Manchin_NRA.html
@@ -39,6 +39,10 @@ $(function () {
                     fontSize:'.9rem'
                 }
         },
+        tooltip: {
+            headerFormat: '<span style="font-size:11px">{series.name}</span><br>',
+            pointFormat: '<span style="color:{point.color}">{point.name}</span>: <b>${point.y}</b> of total<br/>'
+        },
         xAxis: {
             categories: ['2010', '2012', '2014'],
 			labels: {
