--- a/Manchin-ToomeyPart2.html
+++ b/Manchin-ToomeyPart2.html
@@ -42,6 +42,9 @@ $(function () {
         },
         title: {
             text: 'Manchin-Toomey Gun Control Amendment Second Vote',
+            style: {
+                fontSize:'1.5rem',
+            },
         },
       credits: {
       enabled: false,
@@ -61,7 +64,7 @@ $(function () {
                     style: {
                         fontWeight: 'bold',
                         color: 'black',
-						fontSize:'1rem'
+						fontSize:'1.2rem'
                     }
                 },
                 startAngle: -90,
