--- a/Manchin_NRA.html
+++ b/Manchin_NRA.html
@@ -41,7 +41,7 @@ $(function () {
         },
         tooltip: {
             headerFormat: '<span style="font-size:11px">{series.name}</span><br>',
-            pointFormat: '<span style="color:{point.color}">{point.name}</span>: <b>${point.y}</b> of total<br/>'
+            pointFormat: '<span style="color:{point.color}">{point.name}</span> <b>${point.y}</b> of total<br/>'
         },
         xAxis: {
             categories: ['2010', '2012', '2014'],
