--- a/Feinstein.html
+++ b/Feinstein.html
@@ -42,6 +42,9 @@ $(function () {
         },
         title: {
             text: 'Sen. Diane Feinstein Gun Control Amendment',
+            style: {
+                fontSize:'1.5rem',
+            },
         },
 		exporting: {
             enabled: false
@@ -61,7 +64,7 @@ $(function () {
                     style: {
                         fontWeight: 'bold',
                         color: 'black',
-						 fontSize:'1rem'
+						 fontSize:'1.2rem'
                     }
                 },
                 startAngle: -90,
@@ -84,7 +87,7 @@ $(function () {
                         enabled: false
                     }
                 }
-            ]
+            ],
         }]
     });
 });
