--- a/NRASpending.html
+++ b/NRASpending.html
@@ -45,7 +45,7 @@ $(function () {
                 style: {
                     width: '450px',
                     color: '#000000',
-                    fontSize:'22px',
+                    fontSize:'.9rem',
                 }
             },
             type: 'category',
@@ -62,7 +62,11 @@ $(function () {
                     fontSize:'.9rem'
                 }
             },
-
+			labels:{
+			style: {
+                    fontSize:'.9rem'
+                },
+			}
         },
         legend: {
             enabled: false
