--- a/NRASpending.html
+++ b/NRASpending.html
@@ -28,7 +28,10 @@ $(function () {
         },
       colors: ['#b3b3b3','#737373', '#404040'],
         title: {
-            text: 'Money spent by the NRA on campaigns and candidates'
+            text: 'Money spent by the NRA on campaigns and candidates',
+			style: {
+				fontSize:'1.3rem',
+			},
         },
       credits:{
         enabled: false
