--- a/Manchin_NRA.html
+++ b/Manchin_NRA.html
@@ -25,7 +25,10 @@ $(function () {
             type: 'bar'
         },
         title: {
-            text: 'Joe Manchin Election Cycle Campaign Contributions from Gun Rights PACs'
+            text: 'Joe Manchin Election Cycle Campaign Contributions from Gun Rights PACs',
+            style: {
+                fontSize: '1.3rem',
+            },
         },
 		credits:{
 			  enabled: false,
@@ -36,35 +39,46 @@ $(function () {
 		  subtitle: {
             text: 'Source: Federal Election Commission',
 			style: {
-                    fontSize:'.9rem'
-                }
+                fontSize:'1.2rem'
+            }
         },
         tooltip: {
-            headerFormat: '<span style="font-size:11px">{series.name}</span><br>',
-            pointFormat: '<span style="color:{point.color}">{point.name}</span> <b>${point.y}</b> of total<br/>'
+            headerFormat: '<span style="font-size:1.1rem">{series.name}</span><br>',
+            pointFormat: '<span style="color:{point.color}">{point.name}</span> <b>${point.y}</b> of total',
+            style: {
+                
+                fontSize:'1.1rem',
+            
+            }
         },
         xAxis: {
             categories: ['2010', '2012', '2014'],
 			labels: {
                 style: {
-                    fontSize:'.9rem'
+                    fontSize:'1.1rem'
                 }
             }
         },
         yAxis: {
             min: 0,
             title: {
-                text: 'Total money spent on Manchin by top two gun rights PACs'
+                text: 'Total money spent on Manchin by top two gun rights PACs',
+                style: {
+                    fontSize: '1.0rem',
+                },
             },
 			labels: {
                 style: {
-                    fontSize:'.8rem'
+                    fontSize:'1.0rem'
                 },
 				format: '${value:,.0f}'
             }
         },
         legend: {
             reversed: true,
+            itemStyle: {
+                fontSize:'1.1rem',
+            }
         },
         plotOptions: {
             series: {
