--- a/main.html
+++ b/main.html
@@ -12,6 +12,7 @@
 <div class="banner"></div>
 <h1>Politicians battle over gun rights</h1>
 <h2>The search for a bill on the Hill</h2>
+<p class="byline">By: Jordan Branch, Yoonshik Hong</p>
 <div id="content">
 <p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to what President Barack Obama has described as a national problem. Obama has promoted gun control legislation in 15 of his speeches. He and liberal members of Congress have also repeatedly asked for lawmakers to support measures that would require background checks before the purchase of guns and prevent the mentally ill from obtaining them.</p>
 <p>On Dec. 2, a man and his wife entered a facility for the disabled with gun and killed 14 people. They are now suspected to be terrorists, radicalized from Pakistan. On Dec. 3, Sen. Diane Feinstein (D-Calif.) delivered an amendment to the floor that would have prevented people on a federal terrorist watchlist from purchasing guns. The measure failed. The Senate also blocked bipartisan legislation from Sens. Pat Toomey (R-Penn.) and Joe Manchin (D-W.Va.) that would have required background checks for the purchase of arms. The measure first appeared in front of the Senate in 2012 after the Sandy Hook Elementary School shooting in Newtown, Conn. Both times the bill failed by narrow margins with 60 votes to pass and senators who were present for both votes held strong to their initial votes, in favor or opposed, that they cast in 2012. 
@@ -29,7 +30,7 @@
 <p>There have been more mass shootings this year than there have been days. Additionally, <em>Mother Jones</em> found that three-fourths of the mass shootings occured with legally purchased weapons.</p>
 
 <div class="timeline">
-  <iframe src='http://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1gI0ZXhVbzCHEdBC9moHCVYgiD3sX5fKNEtmVHGdTRwk&font=Default&lang=en&initial_zoom=1&height=650' width='100%' height='650' frameborder='0'></iframe>
+  <iframe src='http://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1gI0ZXhVbzCHEdBC9moHCVYgiD3sX5fKNEtmVHGdTRwk&font=Default&lang=en&initial_zoom=0&height=650' width='100%' height='650' frameborder='0'></iframe>
 </div>
 <p>But beyond mass shootings, the day-to-day individual gun violence in America is also increasing on a national level. Gun-related deaths have steadily increased since 2009. Between 2000 and 2013, gun-related deaths have risen by 4,973 deaths. According to multiple media reports, gun-related deaths could outnumber deaths by car accidents this year.</p>
 <iframe src="Gun_related_deaths.html" frameBorder="0"></iframe>
@@ -46,6 +47,7 @@
 <blockquote>"Those who choose to do the NRA's bidding will be held accountable by our constituents. ... Something has to be done. We must take a stand. The American people are desperately looking for help, some help, any help." <br><em>- Senate Minority Leader Harry Reid </em></blockquote>
 <p>The NRA spends millions of dollars each year on gun rights lobbying. Their contributions to campaigns extend past money contributions and include individual campaigning, as well. They create TV and radio ads to support candidates with high ratings on their gun-rights scale and condemn candidates that do not fall in line with their Second Amendment political views. About 89 percent of their money goes to Republican candidates and they always outspend gun control advocates.</p>
 <iframe src="NRASpending.html" frameBorder="0"></iframe>
+<h5><strong>Click on bars for breakdown of spending.</h5>
 <em><strong><h6>Independent Expenditures:</strong> Money spent independent from a politician's official campaign to support or oppose a candidate <br> <strong>Contributions to Committees:</strong> Committees are organized campaign efforts for politicians</h6></em>
 <p>After the Sandy Hook Elementary School shooting, Obama promised he would make his best effort to jumpstart gun reform in Congress. "We can respect the Second Amendment while keeping an irresponsible, law-breaking few from inflicting harm on a massive scale," Obama said in a speech after the Sandy Hook Elementary School mass shooting. One of his promises were universal background checks for potential gun owners. Manchin and Toomey delivered on that promise but failed to rangle the votes the amendment required to pass.</p>
 <div class="blockquote2">Manchin-Toomey Gun Control Amendment 2013 Vote <strong><br> Yes: 54</strong> <br> <strong> No: 46 <br></strong> 60 votes were needed to pass the amendment</div>
