--- a/NRASpending.html
+++ b/NRASpending.html
@@ -30,7 +30,7 @@ $(function () {
         title: {
             text: 'Money spent by the NRA on campaigns and candidates',
 			style: {
-				fontSize:'1.3rem',
+				fontSize:'1.5rem',
 			},
         },
       credits:{
@@ -39,7 +39,7 @@ $(function () {
         subtitle: {
             text: 'Source: Federal Election Commission',
 				style: {
-                    fontSize:'.9rem'
+                    fontSize:'1.3rem'
 			}
         },
         xAxis: {
@@ -54,7 +54,7 @@ $(function () {
             type: 'category',
 			labels:{
 				style: {
-                    fontSize:'.9rem'
+                    fontSize:'1.1rem'
                 }
 			}
         },
@@ -62,7 +62,7 @@ $(function () {
             title: {
                 text: 'Total dollars spent',
 				style: {
-                    fontSize:'.9rem'
+                    fontSize: '1.1rem'
                 }
             },
 			labels:{
