--- a/main.html
+++ b/main.html
@@ -15,12 +15,15 @@
 <p class="byline">By: Jordan Branch, Yoonshik Hong</p>
 <div id="content">
 <p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to what President Barack Obama has described as a national problem. Obama has promoted gun control legislation in 15 of his speeches. He and liberal members of Congress have also repeatedly asked for lawmakers to support measures that would require background checks before the purchase of guns and prevent the mentally ill from obtaining them.</p>
-<p>On Dec. 2, a man and his wife entered a facility for the disabled with firearms and killed 14 people. They are now suspected to be terrorists, radicalized in Pakistan. On Dec. 3, Sen. Diane Feinstein (D-Calif.) delivered an amendment to the floor that would have prevented people on a federal terrorist watchlist from purchasing guns. The measure failed. The Senate also blocked bipartisan legislation from Sens. Pat Toomey (R-Penn.) and Joe Manchin (D-W.Va.) that would have required background checks for the purchase of arms. The measure first appeared in front of the Senate in 2012 after the Sandy Hook Elementary School shooting in Newtown, Connecticut. Both times the bill failed by narrow margins, needing 60 votes to pass. The votes were largely divided along party lines with Republicans in support of gun rights and Democrats looking for restrictions and tighter laws on access to guns. Senators who were present for both votes on the Toomey-Manchin Amendment held strong to their initial votes, in favor or opposed, that they cast in 2012. </p>
+<p>On Dec. 2, a man and his wife entered a facility for the disabled with firearms and killed 14 people. They are now suspected to be terrorists, radicalized in Pakistan. On Dec. 3, Sen. Diane Feinstein (D-Calif.) delivered an amendment to the floor that would have prevented people on a federal terrorist watchlist from purchasing guns. The measure failed. The Senate also blocked bipartisan legislation from Sens. Pat Toomey (R-Penn.) and Joe Manchin (D-W.Va.) that would have required background checks for the purchase of arms. Senate Minority leader Harry Reid accused legislators of kowtowing to NRA interests after the most recent vote to come in two and a half years.</p>
+<p>The Manchin-Toomey measure first appeared in front of the Senate in 2012 after the Sandy Hook Elementary School shooting in Newtown, Connecticut. Both times the bill failed by narrow margins, needing 60 votes to pass. The votes were largely divided along party lines with Republicans in support of gun rights and Democrats looking for restrictions and tighter laws on access to guns. Senators who were present for both votes on the Toomey-Manchin Amendment held strong to their initial votes, in favor or opposed, that they cast in 2012. </p>
+<div class="flexMargin">
 <div class="flex">
 <iframe src="Feinstein.html" frameBorder="0"></iframe>
 </div>
 <div class="flex">
 <iframe src="Manchin-ToomeyPart2.html" frameBorder="0"></iframe>
+</div>
 </div>
 <div class="margin">
 <p>These amendments and many of Obama's calls to action have followed multiple-casualty mass shootings, bringing gun violence into the national spotlight and on to the political agenda. <em>Mother Jones</em> has compiled a list of these shootings, many of which caused more than 10 deaths. These shootings have increased in frequency in recent years. Of the top 11 most deadly mass shootings, 7 occured after 2007. </p></div>
@@ -35,34 +38,29 @@
 <p>There is strong support from both Democrats and Republicans for background checks for gun purchases, preventing mentally ill from purchasing guns, creating federal database for gun sales and banning assault-style weapons, according to Pew Research.</p>
 <iframe src="bipartisanSupport.html" frameBorder="0"></iframe>
 </div>
-
 <div class="banner2"></div>
 <div id="content">
 <p>After both efforts at gun reform failed in the Senate last week, Senate Minority Leader Harry Reid made a statement accusing those who voted against the amendments of folding to the demands of the NRA that such legislation violates the Second Amendment. He said leaders were putting the interests of the NRA over the people they represent.</p>
 <blockquote>"Those who choose to do the NRA's bidding will be held accountable by our constituents. ... Something has to be done. We must take a stand. The American people are desperately looking for help, some help, any help." <br><em>- Senate Minority Leader Harry Reid </em></blockquote>
-<p>Reid's statement begs the question of whether the NRA is running a monopoly on the voting preferences of senators on gun reform legislation. The NRA spends millions of dollars each year on gun rights lobbying. Their contributions to campaigns extend past money contributions and include individual campaigning, as well. They create TV and radio ads to support candidates with high ratings on their gun-rights scale and condemn candidates that do not fall in line with their Second Amendment political views. About 89 percent of their money goes to Republican candidates and they always outspend gun control advocates.</p>
+<p>Reid's statement implies the NRA is controlling the voting outcomes on gun-control legislation. The NRA spends millions of dollars each year on gun rights lobbying. Its contributions to campaigns extend past direct financial contributions and include individual campaigning, as well. It creates TV and radio ads to support candidates with high ratings on their gun-rights scale and condemn candidates that do not fall in line with their Second Amendment political views. It gives the majority of its funds to Republican candidates, according to OpenSecrets.org.</p>
 <iframe src="NRASpending.html" frameBorder="0"></iframe>
 <h5><strong>Click on bars for breakdown of spending.</h5>
 <em><strong><h6>Independent Expenditures:</strong> Money spent independent from a politician's official campaign to support or oppose a candidate <br> <strong>Contributions to Committees:</strong> Committees are organized campaign efforts for politicians</h6></em>
-<p>After the Sandy Hook Elementary School shooting, Obama promised he would make his best effort to jumpstart gun reform in Congress. "We can respect the Second Amendment while keeping an irresponsible, law-breaking few from inflicting harm on a massive scale," Obama said in a speech after the Sandy Hook Elementary School mass shooting. One of his promises were universal background checks for those who wish to own a gun. Manchin and Toomey delivered an amendment to the Senate, honoring Obama's commitment but failed to rangle the 60 votes the amendment required to pass.</p>
+<p>After the Sandy Hook Elementary School shooting, Obama promised he would make his best effort to jumpstart gun reform in Congress. "We can respect the Second Amendment while keeping an irresponsible, law-breaking few from inflicting harm on a massive scale," Obama said in a speech after the Sandy Hook Elementary School mass shooting. One of his promises were universal background checks for those who wish to own a gun. Manchin and Toomey delivered an amendment to the Senate, honoring Obama's commitment, but failed to rangle the 60 votes the amendment required to pass.</p>
 <div class="blockquote2">Manchin-Toomey Gun Control Amendment 2013 Vote <strong><br> Yes: <span class="voteNumber">54</span></strong> <br> <strong> No: <span class="voteNumber">46</span> <br></strong> 60 votes were needed to pass the amendment</div>
 <p>Fift-four Senators (48 Democrats, 4 Republicans, and 2 Independets) were in favor of Manchin-Toomey Amendment in 2012, and 46 Senators (5 Democrats, 41 Republicans) were against the amendment.</p>
-<p>Manchin-Toomey Amendment was 6 votes too short and did not pass the vote in the Senate.</p>
-<p> Manchin had received a significan amount of support from the NRA during his election runs in 2010 and 2012. That support dropped to zero in the year following the amendment.</p>
+<p>The Manchin-Toomey Amendment was 6 votes short from progressing in Congress.</p>
+<p>Before the amendment, in 2010 and 2012 election cycles, Manchin had received a significant amount of support from the NRA. That support dropped to zero in the next election cycle after the amendment.</p>
 <iframe src="Manchin_NRA.html" frameBorder="0"></iframe>
-<p>Manchin received substantial funds from the National Rifle Association and Safari Club International up until the election cycle after the proposed amendment. Afterward, he largely lost financial support from the top two gun control groups.</p>
+<p>Manchin received substantial funds from the NRA and Safari Club International, the second largest gun rights lobbying group, up until the election cycle after the proposed amendment. Afterward, he largely lost financial support from the top two gun control groups.</p>
 <p>In addition to withdrawing its financial support, the NRA also used footage it had ran of the senator previously and created an attack television ad for the senator in West Virginia, as he geared up to run for re-election. The ad appeared on YouTube shortly after the amendment's vote and accused the senator of working with Obama.</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/J_q5zqrVktg" frameborder="0" allowfullscreen></iframe>
-<p>However, Manchin hasn't given up his efforts to pass gun reform. He continued to speak out in favor of background checks after the bill failed, which shows in his revival of the amendment last week. 
-
+<p>However, Manchin hasn't given up on his efforts to pass gun reform. He has continued to speak out in favor of background checks after the bill failed, which shows in his revival of the amendment last week. 
 </div>
-
-
 <div id="content">
-
-<p>Sens. Harry Reid and Chuck Schumer accused legislators of Kowtowing to NRA interests after the most recent vote to come in two and a half years. Sen. John Cornyn, as whip, was one of the strongest voices of the opposition to the bills. He failed to receive any direct support from the NRA or Safari Club International in the 2012 election cycle, but received much larger direct contributions after he voted against Manchin and Toomey's amendment shortly after that election cycle</p>
+<p>Sen. John Cornyn, as whip, was one of the strongest voices of the opposition to the bills presented the first week in December. He failed to receive any direct support from the NRA or SCI in the 2012 election cycle but received much larger direct contributions after he voted against Manchin and Toomey's amendment.</p>
 <iframe src="Cornyn_NRA.html" frameBorder="0"></iframe>
-<p>While Congress refuses to move on background checks and reform, the public groes increasingly concerned for its safety. On Sunday night, the president gave an address to a nation concerned about terrorism on American soil. He attempted to quel their fears, but Reid insists the American people want more than assurances, as mass shootings soar; they want change.</p>
+<p>While Congress refuses to move on background checks and reform, the public groes increasingly concerned for its safety. On Sunday night, the president gave an address to a nation concerned about terrorism on American soil. He attempted to quel the public's fears, but Reid insists the American people want more than assurances, as mass shootings soar; they want a representative body of legislators; they want change.</p>
 </div>
 </body>
 </html>
