--- a/main.html
+++ b/main.html
@@ -26,8 +26,8 @@
 </div>
 </div>
 <div class="margin">
-<p>These amendments and many of Obama's calls to action have followed multiple-casualty mass shootings, bringing gun violence into the national spotlight and on to the political agenda. <em>Mother Jones</em> has compiled a list of these shootings, many of which caused more than 10 deaths. These shootings have increased in frequency in recent years. Of the top 11 most deadly mass shootings, 7 occured after 2007. </p></div>
-<p>In fact, the United States has become a world leader in mass shootings, according to University of Alabama criminology professor Adam Lankford. His research showed that the U.S. accounts for one-third of all mass shootings committed in the world with data from 1966 to 2012. The study also found that widespread, often uncensored, gun ownership might be a large reason for the climate of gun violence in this country. Additionally, <em>Mother Jones</em> found that three-fourths of the mass shootings occured with legally purchased weapons.</p>
+<p>These amendments and many of Obama's calls to action have followed multiple-casualty mass shootings, bringing gun violence into the national spotlight and on to the political agenda. <em>Mother Jones</em> has compiled a list of these shootings, many of which caused more than 10 deaths. These shootings have increased in frequency in recent years. Of the top 11 most deadly mass shootings, seven occurred after 2007. </p></div>
+<p>In fact, the United States has become a world leader in mass shootings, according to University of Alabama criminology professor Adam Lankford. His research showed that the U.S. accounts for one-third of all mass shootings committed in the world with data from 1966 to 2012. The study also found that widespread, often uncensored, gun ownership might be a large reason for the climate of gun violence in this country. Additionally, <em>Mother Jones</em> found that three-fourths of the mass shootings occurred with legally purchased weapons.</p>
 <div class="timeline">
   <iframe src='http://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1gI0ZXhVbzCHEdBC9moHCVYgiD3sX5fKNEtmVHGdTRwk&font=Default&lang=en&initial_zoom=0&height=650' width='100%' height='650' frameborder='0'></iframe>
 </div>
@@ -46,9 +46,9 @@
 <iframe src="NRASpending.html" frameBorder="0"></iframe>
 <h5><strong>Click on bars for breakdown of spending.</h5>
 <em><strong><h6>Independent Expenditures:</strong> Money spent independent from a politician's official campaign to support or oppose a candidate <br> <strong>Contributions to Committees:</strong> Committees are organized campaign efforts for politicians</h6></em>
-<p>After the Sandy Hook Elementary School shooting, Obama promised he would make his best effort to jumpstart gun reform in Congress. "We can respect the Second Amendment while keeping an irresponsible, law-breaking few from inflicting harm on a massive scale," Obama said in a speech after the Sandy Hook Elementary School mass shooting. One of his promises were universal background checks for those who wish to own a gun. Manchin and Toomey delivered an amendment to the Senate, honoring Obama's commitment, but failed to rangle the 60 votes the amendment required to pass.</p>
+<p>After the Sandy Hook Elementary School shooting, Obama promised he would make his best effort to jumpstart gun reform in Congress. "We can respect the Second Amendment while keeping an irresponsible, law-breaking few from inflicting harm on a massive scale," Obama said in a speech after the Sandy Hook Elementary School mass shooting. One of his promises were universal background checks for those who wish to own a gun. Manchin and Toomey delivered an amendment to the Senate, honoring Obama's commitment, but failed to wrangle the 60 votes the amendment required to pass.</p>
 <div class="blockquote2">Manchin-Toomey Gun Control Amendment 2013 Vote <strong><br> Yes: <span class="voteNumber">54</span></strong> <br> <strong> No: <span class="voteNumber">46</span> <br></strong> 60 votes were needed to pass the amendment</div>
-<p>Fift-four Senators (48 Democrats, 4 Republicans, and 2 Independets) were in favor of Manchin-Toomey Amendment in 2012, and 46 Senators (5 Democrats, 41 Republicans) were against the amendment.</p>
+<p>Fifty-four Senators (48 Democrats, 4 Republicans, and 2 Independents) were in favor of Manchin-Toomey Amendment in 2012, and 46 Senators (5 Democrats, 41 Republicans) were against the amendment.</p>
 <p>The Manchin-Toomey Amendment was 6 votes short from progressing in Congress.</p>
 <p>Before the amendment, in 2010 and 2012 election cycles, Manchin had received a significant amount of support from the NRA. That support dropped to zero in the next election cycle after the amendment.</p>
 <iframe src="Manchin_NRA.html" frameBorder="0"></iframe>
@@ -60,7 +60,7 @@
 <div id="content">
 <p>Sen. John Cornyn, as whip, was one of the strongest voices of the opposition to the bills presented the first week in December. He failed to receive any direct support from the NRA or SCI in the 2012 election cycle but received much larger direct contributions after he voted against Manchin and Toomey's amendment.</p>
 <iframe src="Cornyn_NRA.html" frameBorder="0"></iframe>
-<p>While Congress refuses to move on background checks and reform, the public groes increasingly concerned for its safety. On Sunday night, the president gave an address to a nation concerned about terrorism on American soil. He attempted to quel the public's fears, but Reid insists the American people want more than assurances, as mass shootings soar; they want a representative body of legislators; they want change.</p>
+<p>While Congress refuses to move on background checks and reform, the public grows increasingly concerned for its safety. On Sunday night, the president gave an address to a nation concerned about terrorism on American soil. He attempted to quell the public's fears, but Reid insists the American people want more than assurances, as mass shootings soar; they want a representative body of legislators; they want change.</p>
 </div>
 </body>
 </html>
