--- a/main.html
+++ b/main.html
@@ -26,8 +26,7 @@
 </div>
 </div>
 <div class="margin">
-<p>These amendments and many of Obama's calls to action have followed multiple-casualty mass shootings, bringing gun violence into the national spotlight and on to the political agenda. <em>Mother Jones</em> has compiled a list of these shootings, many of which caused more than 10 deaths. These shootings have increased in frequency in recent years. Of the top 11 most deadly mass shootings, seven occurred after 2007. </p></div>
-<p>In fact, the United States has become a world leader in mass shootings, according to University of Alabama criminology professor Adam Lankford. His research showed that the U.S. accounts for one-third of all mass shootings committed in the world with data from 1966 to 2012. The study also found that widespread, often uncensored, gun ownership might be a large reason for the climate of gun violence in this country. Additionally, <em>Mother Jones</em> found that three-fourths of the mass shootings occurred with legally purchased weapons.</p>
+<p>These amendments and many of Obama's calls to action have followed multiple-casualty mass shootings, bringing gun violence into the national spotlight and on to the political agenda. <em>Mother Jones</em> has compiled a list of these shootings, many of which caused more than 10 deaths. These shootings have increased in frequency in recent years. Of the top 11 most deadly mass shootings, seven occurred after 2007. Additionally, <em>Mother Jones</em> found that three-fourths of the mass shootings occurred with legally purchased weapons.</p></div>
 <div class="timeline">
   <iframe src='http://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1gI0ZXhVbzCHEdBC9moHCVYgiD3sX5fKNEtmVHGdTRwk&font=Default&lang=en&initial_zoom=0&height=650' width='100%' height='650' frameborder='0'></iframe>
 </div>
